force-app/main/default/objects/Opp_Cosed_Lost_Description__c/fields/Show_Closed_Detail__c.field-meta.xml
<CustomField>
    <fullName>Show_Closed_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Closed Detail</label>
    <type>Checkbox</type>
</CustomField>