force-app/main/default/objects/Opp_Cosed_Lost_Description__c/fields/Stage_Name_Value__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage Name Value</label>
    <type>TextArea</type>
</CustomField>